--- a/QLTTNN/Webform/Views/Home/DangKy.cshtml
+++ b/QLTTNN/Webform/Views/Home/DangKy.cshtml
@@ -1,25 +1,32 @@
-﻿@model BUS.ThiSinh
+﻿@model Backend.ThiSinhBUS
 
 @{
-	ViewBag.Title = "DangKy";
+    ViewBag.Title = "DangKy";
 }
 
 <h2>DangKy</h2>
 
-
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
-	@Html.AntiForgeryToken()
-
+    @Html.AntiForgeryToken()
+    
 <div class="form-horizontal">
+	<h4>ThiSinh</h4>
+	<hr />
+	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
+
+
+
 
 	<div class="form-group">
 		<div class="col-md-2 control-label ">
-			<strong>Mã CMND</strong>
+			<strong>Chứng minh thư</strong>
 		</div>
 		<div class="col-md-10">
-			@Html.EditorFor(model => model.MaCMND, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.MaCMND, "", new { @class = "text-danger" })
+			@Html.EditorFor(model => model.CMND, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.CMND, "", new { @class = "text-danger" })
 		</div>
 	</div>
 
@@ -38,7 +45,7 @@
 			<strong>Giới tính</strong>
 		</div>
 		<div class="col-md-10">
-			@Html.EditorFor(model => model.GioiTinh, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.DropDownListFor(model => model.GioiTinh, null, new { htmlAttributes = new { @class = "form-control" } })
 			@Html.ValidationMessageFor(model => model.GioiTinh, "", new { @class = "text-danger" })
 		</div>
 	</div>
@@ -58,7 +65,7 @@
 			<strong>Nơi Sinh</strong>
 		</div>
 		<div class="col-md-10">
-			@Html.DropDownListFor(model => model.NoiSinh, null, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.DropDownListFor(model => model.NoiSinh,null,  new { htmlAttributes = new { @class = "form-control" } })
 			@Html.ValidationMessageFor(model => model.NoiSinh, "", new { @class = "text-danger" })
 		</div>
 	</div>
@@ -68,20 +75,30 @@
 			<strong>Số điện thoại</strong>
 		</div>
 		<div class="col-md-10">
-			@Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control" }, @type = "date" })
 			@Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
 		</div>
 	</div>
 
 
+
+
+
+
+
+
+
+
+
+
 	<div class="form-group">
 		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="Create" class="btn btn-default" />
+			<input type="submit" value="DangKy" class="btn btn-default" />
 		</div>
 	</div>
 </div>
 }
 
 <div>
-	@Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
