--- a/QLTTNN/Webform/Views/Shared/_Layout.cshtml
+++ b/QLTTNN/Webform/Views/Shared/_Layout.cshtml
@@ -19,10 +19,11 @@
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("DangKy", "DangKy", "Home")</li>
-                </ul>
+				<ul class="nav navbar-nav">
+					<li>@Html.ActionLink("Home", "Index", "Home")</li>
+					<li>@Html.ActionLink("DangKy", "DangKy", "Home")</li>
+					<li>@Html.ActionLink("TimKiemThongTin", "TimKiemThongTin", "Home")</li>
+				</ul>
             </div>
         </div>
     </div>
