--- a/QLTTNN/Webform/Views/Shared/_Layout.cshtml
+++ b/QLTTNN/Webform/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
 					<li>@Html.ActionLink("Home", "Index", "Home")</li>
 					<li>@Html.ActionLink("DangKy", "DangKy", "Home")</li>
 					<li>@Html.ActionLink("TimKiemThongTin", "TimKiemThongTin", "Home")</li>
+					<li>@Html.ActionLink("GiayChungNhan", "GiayChungNhan", "Home")</li>
+					<li>@Html.ActionLink("DanhSachThiSinh", "DanhSachThiSinh", "Home")</li>
 				</ul>
             </div>
         </div>
