--- a/QLTTNN/Webform/Views/Home/DangKy.cshtml
+++ b/QLTTNN/Webform/Views/Home/DangKy.cshtml
@@ -65,7 +65,7 @@
 			<strong>Nơi Sinh</strong>
 		</div>
 		<div class="col-md-10">
-			@Html.DropDownListFor(model => model.NoiSinh,null,  new { htmlAttributes = new { @class = "form-control" } })
+			@Html.DropDownListFor(model => model.NoiSinh, null, new { htmlAttributes = new { @class = "form-control" } })
 			@Html.ValidationMessageFor(model => model.NoiSinh, "", new { @class = "text-danger" })
 		</div>
 	</div>
@@ -80,7 +80,15 @@
 		</div>
 	</div>
 
-
+	<div class="form-group">
+		<div class="col-md-2 control-label ">
+			<strong>Khóa thi</strong>
+		</div>
+		<div class="col-md-10">
+			@Html.DropDownListFor(model => model.MaKhoaThi, null, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.MaKhoaThi, "", new { @class = "text-danger" })
+		</div>
+	</div>
 
 
 
@@ -93,7 +101,7 @@
 
 	<div class="form-group">
 		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="DangKy" class="btn btn-default" />
+			<input type="submit" value="Đăng ký" class="btn btn-default" />
 		</div>
 	</div>
 </div>
