--- a/QLTTNN/Webform/Views/Home/ThongTinTimKiem.cshtml
+++ b/QLTTNN/Webform/Views/Home/ThongTinTimKiem.cshtml
@@ -12,7 +12,6 @@
 	@Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-	<h4>TourDuLichModel</h4>
 	<hr />
 	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -22,25 +21,75 @@
 
 
 
-
-
-	<div class="form-group">
-		@Html.LabelFor(model => model.PhieuDuThiBUS.SoBaoDanh, htmlAttributes: new { @class = "control-label col-md-2" })
-		<div class="col-md-10">
-			@Html.EditorFor(model => model.PhieuDuThiBUS.SoBaoDanh, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
-			@Html.ValidationMessageFor(model => model.PhieuDuThiBUS.SoBaoDanh, "", new { @class = "text-danger" })
-		</div>
+<div class="form-group">
+	<div class="col-md-2 control-label ">
+		<strong>Họ tên</strong>
 	</div>
-
-	<div class="form-group">
-		@Html.LabelFor(model => model.PhieuDuThiBUS.TenPhongThi, htmlAttributes: new { @class = "control-label col-md-2" })
-		<div class="col-md-10">
-			@Html.EditorFor(model => model.PhieuDuThiBUS.TenPhongThi, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
-			@Html.ValidationMessageFor(model => model.PhieuDuThiBUS.TenPhongThi, "", new { @class = "text-danger" })
-		</div>
+	<div class="col-md-10">
+		@Html.EditorFor(model => model.HoTen, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+		@Html.ValidationMessageFor(model => model.HoTen, "", new { @class = "text-danger" })
 	</div>
+</div>
 
+<div class="form-group">
+	<div class="col-md-2 control-label ">
+		<strong>Số báo danh</strong>
+	</div>
+	<div class="col-md-10">
+		@Html.EditorFor(model => model.SoBaoDanh, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+		@Html.ValidationMessageFor(model => model.SoBaoDanh, "", new { @class = "text-danger" })
+	</div>
+</div>
 
+<div class="form-group">
+	<div class="col-md-2 control-label ">
+		<strong>Tên phòng thi</strong>
+	</div>
+	<div class="col-md-10">
+		@Html.EditorFor(model => model.TenPhongThi, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+		@Html.ValidationMessageFor(model => model.TenPhongThi, "", new { @class = "text-danger" })
+	</div>
+</div>
+
+<div class="form-group">
+	<div class="col-md-2 control-label ">
+		<strong>Điểm nghe</strong>
+	</div>
+	<div class="col-md-10">
+		@Html.EditorFor(model => model.diemNghe, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+		@Html.ValidationMessageFor(model => model.diemNghe, "", new { @class = "text-danger" })
+	</div>
+</div>
+
+<div class="form-group">
+	<div class="col-md-2 control-label ">
+		<strong>Điểm nói</strong>
+	</div>
+	<div class="col-md-10">
+		@Html.EditorFor(model => model.diemNoi, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+		@Html.ValidationMessageFor(model => model.diemNoi, "", new { @class = "text-danger" })
+	</div>
+</div>
+
+<div class="form-group">
+	<div class="col-md-2 control-label ">
+		<strong>Điểm viết</strong>
+	</div>
+	<div class="col-md-10">
+		@Html.EditorFor(model => model.diemViet, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+		@Html.ValidationMessageFor(model => model.diemViet, "", new { @class = "text-danger" })
+	</div>
+</div>
+
+<div class="form-group">
+	<div class="col-md-2 control-label ">
+		<strong>Điểm đọc</strong>
+	</div>
+	<div class="col-md-10">
+		@Html.EditorFor(model => model.diemDoc, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
+		@Html.ValidationMessageFor(model => model.diemDoc, "", new { @class = "text-danger" })
+	</div>
+</div>
 
 
 
@@ -52,7 +101,7 @@
 }
 
 <div>
-	@Html.ActionLink("Back to List", "QLTour")
+	@Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
